--- a/src/styles/vars/colors.scss
+++ b/src/styles/vars/colors.scss
@@ -5,8 +5,10 @@ $off-white: rgb(240, 243, 255);
 $blue: rgb(55, 140, 231);
 $light-blue: rgb(103, 198, 227);
 $light-light-blue: rgb(223, 245, 255);
+$gentle-border: rgba(0, 0, 0, .3);
 
 $bg-color: $dark-blue;
 $header-color: $neon-green;
 $btn-color: $indigo;
 $font-color: $off-white;
+$card-bg-color: $neon-green;
