--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -20,11 +20,36 @@
       div {
         display: flex;
         flex-direction: column;
-          input {
-              margin-bottom: 25px;
-              width: 200px;
-            }
+        input {
+          margin-bottom: 25px;
+          width: 200px;
         }
+      }
+    }
+    .login-success {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background-color: $indigo;
+      opacity: 0.9;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: $neon-green;
+      font-size: 2.2rem;
+      border-radius: 8px;
+      animation: fadeIn .2s;
     }
   }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
