added user page

--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -2,7 +2,7 @@
   <div class="users">
     @for (user of users | async; track $index) {
         <div class="user">
-            <user [user]="user"></user>
+            <user [user]="user" (userClicked)="onUserClicked(user)"></user>
         </div>
     }
   </div>
