extended user page added related services

--- a/src/app/pages/user-page/user-page.component.html
+++ b/src/app/pages/user-page/user-page.component.html
@@ -7,6 +7,9 @@
         <g-map [coords]="user.address.geo"></g-map>
       </div>
     </div>
+    <div class="posts">
+        
+    </div>
   </div>
-  
+
 </div>
