--- a/src/app/pages/user-page/user-page.component.html
+++ b/src/app/pages/user-page/user-page.component.html
@@ -1,4 +1,5 @@
 <div class="wrapper">
+  @if (posts$ | async; as posts) {
   <div class="cards">
     <user [user]="user"></user>
     <div class="card">
@@ -8,8 +9,14 @@
       </div>
     </div>
     <div class="posts">
-        
+      @for (post of posts; track $index) {
+      <post [post]="post" class="post"></post>
+      }
     </div>
   </div>
-
+  } @else {
+    <div class="loader-wrapper">
+      <div class="loader"></div>
+    </div>
+  }
 </div>
