--- a/src/app/pages/user-page/user-page.component.scss
+++ b/src/app/pages/user-page/user-page.component.scss
@@ -1,9 +1,18 @@
 .wrapper {
   .cards {
-    display: flex;
-    .card {
-      flex: 1;
-      margin-left: 10px;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    gap: 20px;
+    .posts {
+      display: grid;
+      grid-template-columns: auto auto auto;
+      gap: 20px;
     }
+  }
+  .loader-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
   }
 }
