--- a/src/app/pages/user-page/user-page.component.scss
+++ b/src/app/pages/user-page/user-page.component.scss
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: 50% 50%;
     gap: 20px;
-    .posts {
+    .items {
       display: grid;
       grid-template-columns: auto auto auto;
       gap: 20px;
