--- a/src/app/pages/user-page/user-page.component.html
+++ b/src/app/pages/user-page/user-page.component.html
@@ -12,7 +12,7 @@
       <h2>Posts</h2>
       <div class="items">
         @for (post of posts; track $index) {
-        <post [post]="post" class="post"></post>
+        <post [post]="post" class="post" (click)="onPostClick(post)"></post>
         }
       </div>
     </div>
