--- a/src/styles/animations/animations.scss
+++ b/src/styles/animations/animations.scss
@@ -6,3 +6,21 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
