--- a/src/app/modals/post-modal/post-modal.component.scss
+++ b/src/app/modals/post-modal/post-modal.component.scss
@@ -1,14 +1,14 @@
-@import 'colors';
+@import "colors";
 .wrapper {
-    background-color: $bg-color;
-    height: 500px;
-    width: 350px;
+  background-color: $bg-color;
+  height: 500px;
+  width: 350px;
 
-    .comments {
-        .comment {
-            background-color: $neon-green;
-            padding: 5px;
-            margin: 7px 0;
-        }
+  .comments {
+    .comment {
+      background-color: $neon-green;
+      padding: 5px;
+      margin: 7px 0;
     }
+  }
 }
